--- a/coding/assets/css/member.css
+++ b/coding/assets/css/member.css
@@ -707,3 +707,200 @@ textarea:-webkit-autofill,
 select:-webkit-autofill {
     box-shadow: inset 0 0 0 50px #fff
 }
+
+/* signin : 회원가입 */
+.main__signin {
+    background: #ff4409;
+    transition: all .5s;
+    padding: 1px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.signin {
+    width: 45%;
+    margin: 100px auto;
+    background: #f7e1cd;
+    min-height: 400px;
+    display: table;
+    position: relative;
+    box-shadow: 0 0 4px rgba(0, 0, 0, .14), 0 4px 8px rgba(0, 0, 0, .28);
+}
+
+.signin>div {
+    display: table-cell;
+    vertical-align: middle;
+    text-align: center;
+    color: #fff;
+}
+
+.signin button {
+    background: transparent;
+    /* //background-image: linear-gradient(90deg, #e0b722, #ff4409); */
+    display: inline-block;
+    padding: 10px 30px;
+    border: 3px solid #fff;
+    border-radius: 50px;
+    background-clip: padding-box;
+    position: relative;
+    color: #FFF;
+    /* //box-shadow: 0 0 4px rgba(0,0,0,.14), 0 4px 8px rgba(0,0,0,.28); */
+    transition: all .25s;
+}
+
+.signin button.dark {
+    border-color: #ff4409;
+    background: #ff4409;
+    cursor: pointer;
+}
+
+.signin .splits p {
+    font-size: 18px;
+}
+
+.signin button:active {
+    box-shadow: none;
+}
+
+.signin button:focus {
+    outline: none;
+}
+
+.signin .checks a {
+    font-size: 12px;
+    color: var(--black400);
+}
+
+.signin>.wrapper {
+    position: absolute;
+    width: 70%;
+    height: 120%;
+    top: -10%;
+    left: 15%;
+    background: #fff;
+    box-shadow: 0 0 4px rgba(0, 0, 0, .14), 0 4px 8px rgba(0, 0, 0, .28);
+    transition: all .5s;
+    color: #303030;
+    overflow: hidden;
+}
+
+.signin .wrapper>form {
+    padding: 15px 30px 30px;
+    width: 100%;
+    transition: all .5s;
+    background: #fff;
+    width: 100%;
+}
+
+.signin .wrapper>form:focus {
+    outline: none;
+}
+
+.signin .wrapper #sign {
+    padding-top: 12%;
+    visibility: visible;
+}
+
+
+
+.signin .wrapper.move #sign {
+    transform: translateX(-100%);
+    visibility: hidden;
+}
+
+.signin .wrapper>form>div {
+    position: relative;
+    margin-bottom: 15px;
+}
+
+.signin .wrapper label {
+    position: absolute;
+    top: -7px;
+    font-size: 12px;
+    white-space: nowrap;
+    background: #fff;
+    text-align: left;
+    left: 15px;
+    padding: 0 5px;
+    color: #999;
+    pointer-events: none;
+}
+
+.signin .wrapper h3 {
+    margin-bottom: 25px;
+}
+
+.signin .wrapper input {
+    height: 40px;
+    padding: 5px 15px;
+    width: 100%;
+    border: solid 1px #999;
+}
+
+.signin .wrapper input:focus {
+    outline: none;
+    border-color: #ff4409;
+}
+
+@media (max-width: 767px) {
+    .veen {
+        padding: 5px;
+        margin: 0;
+        width: 100%;
+        display: block;
+    }
+
+    .veen>.wrapper {
+        position: relative;
+        height: auto;
+        top: 0;
+        left: 0;
+        width: 100%;
+    }
+
+    .veen>div {
+        display: inline-block;
+    }
+
+    .splits {
+        width: 50%;
+        background: #fff;
+        float: left;
+    }
+
+    .splits button {
+        width: 100%;
+        border-radius: 0;
+        background: #505050;
+        border: 0;
+        opacity: .7;
+    }
+
+    .splits button.active {
+        opacity: 1;
+    }
+
+    .splits button.active {
+        opacity: 1;
+        background: #ff4409;
+    }
+
+    .splits.rgstr-btn button.active {
+        background: #186FFB;
+    }
+
+    .splits p {
+        display: none;
+    }
+
+    .veen>.wrapper.move {
+        left: 0%;
+    }
+}
+
+input:-webkit-autofill,
+textarea:-webkit-autofill,
+select:-webkit-autofill {
+    box-shadow: inset 0 0 0 50px #fff
+}
