--- a/coding/assets/css/main.css
+++ b/coding/assets/css/main.css
@@ -669,11 +669,11 @@ main__banner
 }
 
 #main__motto .box1 .box1-1 {
-    width: 50%;
+    width: 40%;
 }
 
 #main__motto .box1 .box1-1-1 {
-    background-color: #fff;
+    background-color: var(--backgroundColor);
     height: 30%;
     display: flex;
     justify-content: center;
@@ -682,7 +682,7 @@ main__banner
 }
 
 #main__motto .box1 .box1-1-1>p {
-    font-size: 40px;
+    font-size: 50px;
     color: var(--mainColor);
     font-family: var(--fontG);
     font-weight: 800;
@@ -690,7 +690,7 @@ main__banner
 
 #main__motto .box1 .box1-1-2 {
     margin-top: 25px;
-    height: 46%;
+    height: 40%;
     background-color: var(--backgroundColor);
     border-radius: 20px;
     display: flex;
@@ -706,23 +706,24 @@ main__banner
     display: flex;
     flex-direction: column;
     align-items: flex-end;
+    width: 60%;
 }
 
 #main__motto .box1 .box1-2>img {
-    height: 80%;
+    height: 74%;
 }
 
 #main__motto .box1 .box1-2>p {
     text-align: left;
     margin-right: 30px;
-    margin-top: 20px;
+    margin-top: 26px;
     color: var(--white);
     line-height: 2;
+    font-size: 16px;
 }
 
 #main__motto .box2 {
     display: flex;
-    padding: 40px;
 }
 
 #main__motto .box2 .box2-1 {
@@ -766,17 +767,20 @@ main__banner
 #main__motto .box2 .box2-2>p,
 #main__motto .box2 .box2-3>p {
     color: var(--white);
-    margin-top: 20px;
+    margin-top: 18px;
     font-size: 14px;
+    line-height: 2;
 }
 
 #main__motto .box3 {
-    width: 800px;
-    height: 430px;
+    width: 848px;
+    height: 433px;
+    margin-top: 110px;
     background-color: var(--backgroundColor);
     display: flex;
     justify-content: center;
     align-items: center;
+    border-radius: 20px;
 }
 
 #main__motto .box3>img {
@@ -798,8 +802,9 @@ main__banner
 
 .main__goal .container>p {
     font-size: 20px;
-    margin-top: 20px;
+    margin-top: 5px;
     color: var(--mainColor);
+    font-weight: bold;
 }
 
 .main__goal .goal__box {
@@ -807,20 +812,23 @@ main__banner
     text-align: left;
     justify-content: center;
     margin-top: 80px;
+    margin-bottom: 160px;
 }
 
 .main__goal .goal__box .goal__box1,
 .main__goal .goal__box .goal__box2 {
-    width: 346px;
-    height: 446px;
+    width: 343px;
+    height: 444px;
     background-color: var(--mainColor);
     margin-right: 20px;
+    border-radius: 20px;
 }
 
 .main__goal .goal__box .goal__box3 {
-    width: 346px;
-    height: 446px;
+    width: 343px;
+    height: 444px;
     background-color: var(--mainColor);
+    border-radius: 20px;
 }
 
 .main__goal .goal__box .goal__box1>p,
@@ -852,9 +860,9 @@ main__banner
 
 .cover {
     width: 100vw;
-    margin-bottom: 10rem;
+    margin-bottom: 11rem;
     display: flex;
-    margin-top: 10vh;
+    margin-top: 160px;
     background-color: var(--mainColor);
 }
 
@@ -862,5 +870,5 @@ main__banner
     font-size: 5vw;
     font-weight: 400;
     color: var(--white);
-    font-family: var(--fontP);
+    font-family: var(--fontG);
 }
