--- a/coding/assets/css/header.css
+++ b/coding/assets/css/header.css
@@ -11,6 +11,7 @@ header__inner .member : 로그인 영역
     align-items: center;
     justify-content: space-between;
     /* border-bottom: 1px solid var(--mainColor); */
+    margin-top: 10px;
 }
 
 .header__inner .logo {
