--- a/coding/assets/css/member.css
+++ b/coding/assets/css/member.css
@@ -315,7 +315,7 @@
 
 .logsign>div .btn {
     padding: 5px 40px;
-    background-color: rgb(224, 183, 34);
+    background-color: #9BABB8;
     color: #fff;
     border-radius: 20px;
     margin-top: 5px;
@@ -344,8 +344,8 @@
 }
 
 .logsign .move button.dark {
-    border-color: #e0b722;
-    background: #e0b722;
+    border-color: #9BABB8;
+    background: #9BABB8;
 }
 
 .logsign .splits p {
@@ -448,7 +448,7 @@
 }
 
 .logsign>.wrapper.move input:focus {
-    border-color: #e0b722;
+    border-color: #9BABB8;
 }
 
 #login .checks {
@@ -500,7 +500,7 @@
     }
 
     .splits.sign-btn button.active {
-        background: #e0b722;
+        background: #9BABB8;
     }
 
     .splits p {
@@ -549,7 +549,7 @@ select:-webkit-autofill {
 
 .veen button {
     background: transparent;
-    /* //background-image: linear-gradient(90deg, #e0b722, #ff4931); */
+    /* //background-image: linear-gradient(90deg, #9BABB8, #ff4931); */
     display: inline-block;
     padding: 10px 30px;
     border: 3px solid #fff;
@@ -567,8 +567,8 @@ select:-webkit-autofill {
 }
 
 .veen .move button.dark {
-    border-color: #e0b722;
-    background: #e0b722;
+    border-color: #9BABB8;
+    background: #9BABB8;
 }
 
 .veen .splits p {
@@ -671,7 +671,12 @@ select:-webkit-autofill {
 }
 
 .veen>.wrapper.move input:focus {
-    border-color: #e0b722;
+    border-color: #9BABB8;
+}
+
+#register1 .checks {
+    font-family: var(--fontN);
+    font-size: 12px;
 }
 
 @media (max-width: 767px) {
@@ -718,7 +723,7 @@ select:-webkit-autofill {
     }
 
     .splits.psw-btn button.active {
-        background: #e0b722;
+        background: #9BABB8;
     }
 
     .splits p {
