--- a/coding/assets/css/member.css
+++ b/coding/assets/css/member.css
@@ -392,7 +392,7 @@
 }
 
 .logsign .wrapper #signin {
-    transform: translateY(-80%) translateX(100%);
+    transform: translateY(-71%) translateX(100%);
     visibility: hidden;
 }
 
@@ -436,6 +436,7 @@
     border: solid 1px #999;
     font-family: var(--fontN);
     font-size: 12px;
+    position: relative;
 }
 
 .logsign .wrapper input:focus {
@@ -449,6 +450,25 @@
 
 .logsign>.wrapper.move input:focus {
     border-color: #9BABB8;
+}
+
+#signin>div .btns {
+    padding: 5px 8px;
+    background-color: #9BABB8;
+    font-family: var(--fontN);
+    font-size: 12px;
+    color: #fff;
+    margin-top: 5px;
+    border-radius: 30px;
+    width: 30%;
+    margin-left: 35%;
+    cursor: pointer;
+}
+
+#signin .mail input {
+    width: 60%;
+    /* margin-right: 30%; */
+    position: relative;
 }
 
 #login .checks {
