--- a/assets/css/fonts.css
+++ b/assets/css/fonts.css
@@ -94,7 +94,7 @@
     font-display: swap;
 }
 
-/* @font-face {
+@font-face {
     font-family: "Montserrat";
     font-weight: 100;
     font-style: normal;
@@ -155,4 +155,4 @@
     font-weight: 900;
     font-style: normal;
     src: url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap')
-} */
+}
