--- a/assets/css/vars.css
+++ b/assets/css/vars.css
@@ -2,7 +2,7 @@
     --fontN: "NanumSquareNeo";
     --fontG: "GmarketSans";
     --fontM: "Montserrat";
-    --fontP: "Pacifico";
+    --fontO: "Oswald";
 
     --mainColor: #ff4409;
     --pointColor: #f7e1cd;
