--- a/assets/css/fonts.css
+++ b/assets/css/fonts.css
@@ -95,7 +95,7 @@
 }
 
 @font-face {
-    font-family: 'Montserrat';
+    font-family: 'Montserrat-Thin';
     src: url('../fonts/Montserrat-Thin.woff2') format('woff2'),
         url('../fonts/Montserrat-Thin.woff') format('woff');
     font-weight: 100;
@@ -104,7 +104,7 @@
 }
 
 @font-face {
-    font-family: 'Montserrat';
+    font-family: 'Montserrat-Thin';
     src: url('../fonts/Montserrat-Thin.woff2') format('woff2'),
         url('../fonts/Montserrat-Thin.woff') format('woff');
     font-weight: 200;
@@ -113,7 +113,7 @@
 }
 
 @font-face {
-    font-family: 'Montserrat';
+    font-family: 'Montserrat-Thin';
     src: url('../fonts/Montserrat-Thin.woff2') format('woff2'),
         url('../fonts/Montserrat-Thin.woff') format('woff');
     font-weight: 300;
@@ -122,7 +122,7 @@
 }
 
 @font-face {
-    font-family: 'Montserrat';
+    font-family: 'Montserrat-Thin';
     src: url('../fonts/Montserrat-Thin.woff2') format('woff2'),
         url('../fonts/Montserrat-Thin.woff') format('woff');
     font-weight: 400;
@@ -131,7 +131,7 @@
 }
 
 @font-face {
-    font-family: 'Montserrat';
+    font-family: 'Montserrat-Thin';
     src: url('../fonts/Montserrat-Thin.woff2') format('woff2'),
         url('../fonts/Montserrat-Thin.woff') format('woff');
     font-weight: 500;
@@ -140,16 +140,7 @@
 }
 
 @font-face {
-    font-family: 'Montserrat';
-    src: url('../fonts/Montserrat-Thin.woff2') format('woff2'),
-        url('../fonts/Montserrat-Thin.woff') format('woff');
-    font-weight: 100;
-    font-style: normal;
-    font-display: swap;
-}
-
-@font-face {
-    font-family: 'Montserrat';
+    font-family: 'Montserrat-Thin';
     src: url('../fonts/Montserrat-Thin.woff2') format('woff2'),
         url('../fonts/Montserrat-Thin.woff') format('woff');
     font-weight: 600;
@@ -158,7 +149,7 @@
 }
 
 @font-face {
-    font-family: 'Montserrat';
+    font-family: 'Montserrat-Thin';
     src: url('../fonts/Montserrat-Thin.woff2') format('woff2'),
         url('../fonts/Montserrat-Thin.woff') format('woff');
     font-weight: 700;
@@ -167,7 +158,7 @@
 }
 
 @font-face {
-    font-family: 'Montserrat';
+    font-family: 'Montserrat-Thin';
     src: url('../fonts/Montserrat-Thin.woff2') format('woff2'),
         url('../fonts/Montserrat-Thin.woff') format('woff');
     font-weight: 800;
@@ -176,14 +167,13 @@
 }
 
 @font-face {
-    font-family: 'Montserrat';
+    font-family: 'Montserrat-Thin';
     src: url('../fonts/Montserrat-Thin.woff2') format('woff2'),
         url('../fonts/Montserrat-Thin.woff') format('woff');
     font-weight: 900;
     font-style: normal;
     font-display: swap;
 }
-
 
 
 @font-face {
@@ -196,7 +186,7 @@
 }
 
 @font-face {
-    font-family: 'Montserrat';
+    font-family: 'Montserrat-Thin';
     src: url('../fonts/Montserrat-ThinItalic.woff2') format('woff2'),
         url('../fonts/Montserrat-ThinItalic.woff') format('woff');
     font-weight: 100;
@@ -205,7 +195,7 @@
 }
 
 @font-face {
-    font-family: 'Montserrat';
+    font-family: 'Montserrat-Thin';
     src: url('../fonts/Montserrat-ThinItalic.woff2') format('woff2'),
         url('../fonts/Montserrat-ThinItalic.woff') format('woff');
     font-weight: 200;
@@ -214,7 +204,7 @@
 }
 
 @font-face {
-    font-family: 'Montserrat';
+    font-family: 'Montserrat-Thin';
     src: url('../fonts/Montserrat-ThinItalic.woff2') format('woff2'),
         url('../fonts/Montserrat-ThinItalic.woff') format('woff');
     font-weight: 300;
@@ -223,7 +213,7 @@
 }
 
 @font-face {
-    font-family: 'Montserrat';
+    font-family: 'Montserrat-Thin';
     src: url('../fonts/Montserrat-ThinItalic.woff2') format('woff2'),
         url('../fonts/Montserrat-ThinItalic.woff') format('woff');
     font-weight: 400;
@@ -232,7 +222,7 @@
 }
 
 @font-face {
-    font-family: 'Montserrat';
+    font-family: 'Montserrat-Thin';
     src: url('../fonts/Montserrat-ThinItalic.woff2') format('woff2'),
         url('../fonts/Montserrat-ThinItalic.woff') format('woff');
     font-weight: 500;
@@ -241,7 +231,7 @@
 }
 
 @font-face {
-    font-family: 'Montserrat';
+    font-family: 'Montserrat-Thin';
     src: url('../fonts/Montserrat-ThinItalic.woff2') format('woff2'),
         url('../fonts/Montserrat-ThinItalic.woff') format('woff');
     font-weight: 600;
@@ -250,7 +240,7 @@
 }
 
 @font-face {
-    font-family: 'Montserrat';
+    font-family: 'Montserrat-Thin';
     src: url('../fonts/Montserrat-ThinItalic.woff2') format('woff2'),
         url('../fonts/Montserrat-ThinItalic.woff') format('woff');
     font-weight: 700;
@@ -259,7 +249,7 @@
 }
 
 @font-face {
-    font-family: 'Montserrat';
+    font-family: 'Montserrat-Thin';
     src: url('../fonts/Montserrat-ThinItalic.woff2') format('woff2'),
         url('../fonts/Montserrat-ThinItalic.woff') format('woff');
     font-weight: 800;
@@ -268,7 +258,7 @@
 }
 
 @font-face {
-    font-family: 'Montserrat';
+    font-family: 'Montserrat-Thin';
     src: url('../fonts/Montserrat-ThinItalic.woff2') format('woff2'),
         url('../fonts/Montserrat-ThinItalic.woff') format('woff');
     font-weight: 900;
