--- a/assets/css/vars.css
+++ b/assets/css/vars.css
@@ -1,7 +1,8 @@
 :root {
     --fontN: "NanumSquareNeo";
     --fontG: "GmarketSans";
-    --fontM: "Montserrat-Thin";
+    --fontM: "Montserrat";
+    --fontP: "Pacifico";
     --fontO: "Oswald";
 
     --mainColor: #ff4409;
