--- a/assets/css/fonts.css
+++ b/assets/css/fonts.css
@@ -95,15 +95,6 @@
 }
 
 @font-face {
-    font-family: 'Oswald';
-    src: url('../fonts/Oswald-Regular.woff2') format('woff2'),
-        url('../fonts/Oswald-Regular.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-    font-display: swap;
-}
-
-@font-face {
     font-family: 'Montserrat';
     src: url('../fonts/Montserrat/Montserrat-BlackItalic.woff2') format('woff2'),
         url('../fonts/Montserrat/Montserrat-BlackItalic.woff') format('woff');
@@ -261,6 +252,60 @@
     src: url('../fonts/Montserrat/Montserrat-Thin.woff2') format('woff2'),
         url('../fonts/Montserrat/Montserrat-Thin.woff') format('woff');
     font-weight: 100;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Oswald';
+    src: url('../fonts/Oswald/Oswald-ExtraLight.woff2') format('woff2'),
+        url('../fonts/Oswald/Oswald-ExtraLight.woff') format('woff');
+    font-weight: 200;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Oswald';
+    src: url('../fonts/Oswald/Oswald-Light.woff2') format('woff2'),
+        url('../fonts/Oswald/Oswald-Light.woff') format('woff');
+    font-weight: 300;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Oswald';
+    src: url('../fonts/Oswald/Oswald-Bold.woff2') format('woff2'),
+        url('../fonts/Oswald/Oswald-Bold.woff') format('woff');
+    font-weight: bold;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Oswald';
+    src: url('../fonts/Oswald/Oswald-Medium.woff2') format('woff2'),
+        url('../fonts/Oswald/Oswald-Medium.woff') format('woff');
+    font-weight: 500;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Oswald';
+    src: url('../fonts/Oswald/Oswald-Regular.woff2') format('woff2'),
+        url('../fonts/Oswald/Oswald-Regular.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Oswald';
+    src: url('../fonts/Oswald/Oswald-SemiBold.woff2') format('woff2'),
+        url('../fonts/Oswald/Oswald-SemiBold.woff') format('woff');
+    font-weight: 600;
     font-style: normal;
     font-display: swap;
 }
