--- a/WRM/coding/assets/css/commons.css
+++ b/WRM/coding/assets/css/commons.css
@@ -6,7 +6,8 @@ body {
 /* wrap */
 #wrap {
     width: 100%;
-    height: 100vh;
+    background-color: var(--backgroundColor);
+    overflow: hidden
 }
 
 .container {
@@ -26,6 +27,12 @@ body {
     height: 1px;
     position: relative;
     border-bottom: 1px solid var(--mainColor);
+}
+
+@media(max-width:500px) {
+    .line-bot {
+        border: 0;
+    }
 }
 
 /* 
