--- a/WRM/coding/assets/css/header.css
+++ b/WRM/coding/assets/css/header.css
@@ -15,7 +15,7 @@ header__inner .member: 로그인 / 회원가입
 }
 
 .header__inner .logo {
-    width: 100px;
+    width: 20%;
     min-height: 3.125rem;
     text-align: center;
 }
@@ -26,7 +26,7 @@ header__inner .member: 로그인 / 회원가입
 }
 
 .header__inner .nav {
-    width: calc(100% - 100px - 20%);
+    width: 60%;
     min-height: 3.125rem;
     display: flex;
     justify-content: center;
@@ -50,6 +50,7 @@ header__inner .member: 로그인 / 회원가입
     color: var(--mainColor);
     padding: 0.625rem 1.875rem;
     text-align: center;
+    transition: all 0.3s;
 }
 
 .header__inner .nav>ul>li>a:hover {
@@ -76,6 +77,7 @@ header__inner .member: 로그인 / 회원가입
     font-size: 0.875rem;
     padding: 0.625rem;
     color: var(--mainColor);
+    transition: all 0.3s;
 }
 
 .header__inner .member>ul>li>a:hover {
@@ -110,10 +112,12 @@ header__inner .member: 로그인 / 회원가입
         flex-direction: column;
         justify-content: center;
         align-items: center;
+        margin: 0.625rem;
     }
 
     .header__inner .nav {
         width: 100%;
+        border-bottom: 1px solid var(--mainColor);
     }
 
     .header__inner .nav>ul>li {
@@ -124,9 +128,14 @@ header__inner .member: 로그인 / 회원가입
     .header__inner .nav>ul>li>a {
         width: 100%;
         padding: 0.75rem;
+        font-size: 1rem;
     }
 
     .header__inner .member {
         width: 100%;
+    }
+
+    .header__inner .member>ul>li>a {
+        font-size: 0.875rem;
     }
 }
