--- a/coding/assets/css/comm_notice.css
+++ b/coding/assets/css/comm_notice.css
@@ -37,6 +37,8 @@ table__bottom - 게시판 하단
     display: flex;
     margin-top: 50px;
     gap: 36px;
+    align-items: center;
+    justify-content: center;
 }
 
 .comm__link ul .links {
@@ -184,4 +186,120 @@ table__bottom - 게시판 하단
     background-color: var(--mainColor);
     color: var(--white);
     border-color: var(--mainColor);
+}
+
+@media (max-width: 1000px) {
+    .main__community {
+        width: 100%;
+    }
+
+    .comm__link .links li {
+        width: 10rem;
+        height: 10rem;
+    }
+
+    .comm__link .links li span {
+        font-size: 0.875rem;
+        margin-left: 1rem;
+    }
+
+    .comm__link .links li img {
+        width: 35%;
+    }
+
+    .table__top .left,
+    .table__top .left em {
+        font-size: 1rem;
+    }
+
+    .table__top .right .btns1,
+    .table__top .right .btns2 {
+        flex-direction: column;
+        padding: 0.7rem 1.4rem;
+        cursor: pointer;
+        font-size: 0.875rem;
+        border: 2px solid var(--mainColor);
+    }
+
+    .table__top .right select,
+    .table__top .right input {
+        padding: 0.5rem 1.3rem;
+    }
+
+    .table__bottom {
+        font-size: 0.875rem;
+        padding: 1rem 1rem;
+    }
+}
+
+@media (max-width: 800px) {
+    .comm__link ul {
+        gap: 1rem;
+    }
+
+    .table__top .right .btns1,
+    .table__top .right .btns2 {
+        flex-direction: column;
+        padding: 1rem 1.4rem;
+        cursor: pointer;
+        font-size: 0.875rem;
+    }
+
+    .table__top .right select,
+    .table__top .right input {
+        padding: 1rem 1rem;
+        font-size: 1rem;
+    }
+}
+
+@media (max-width: 500px) {
+    .main__community .title01 {
+        font-size: 0.875rem;
+    }
+
+    .main__community .title02 {
+        font-size: 4.375rem;
+    }
+
+    .comm__link ul {
+        gap: 0.375rem;
+    }
+
+    .comm__link .links li {
+        width: 7rem;
+        height: 7rem;
+    }
+
+    .comm__link .links li span {
+        font-size: 0.875rem;
+        margin-left: 1rem;
+    }
+
+    .comm__link .links li img {
+        display: none;
+    }
+
+    .table__top .right .btns1,
+    .table__top .right .btns2 {
+        flex-direction: column;
+        padding: 0.5rem 1rem;
+        cursor: pointer;
+        font-size: 0.875rem;
+    }
+
+    .table__top .right select,
+    .table__top .right input {
+        padding: 0.5rem 1.3rem;
+        font-size: 0.875rem;
+    }
+
+    .table__top .left,
+    .table__top .left em {
+        font-size: 0.875rem;
+    }
+
+    .table__bottom li a {
+        width: 1.625rem;
+        font-size: 0.625rem;
+    }
 }
