--- a/coding/assets/css/style.css
+++ b/coding/assets/css/style.css
@@ -13,6 +13,7 @@
 @import "intro.css";
 @import "board.css";
 @import "main.css";
+@import "login.css";
 @import "media.css";
 @import url("https://fonts.googleapis.com/css2?family=Pacifico&display=swap");
 
